new plot, new tests and other

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 [ServerConfig]
-serverUrl: http://localhost:8090/symphony/
+serverurl: http://localhost:8090/symphony/
 
 [LocalConfig]
 unusedfield = Green
