added proceduresfor stepping through time manually with different input signals

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,5 +1,5 @@
 [ServerConfig]
-serverurl: http://localhost:8090/symphony/
+serverurl: http://landau-nic0.mse.ncsu.edu:15834/symphony/
 
 [LocalConfig]
 unusedfield = Green
